[CW30]
* SyncProxyTester:Ignoring pauses in autotest
+ SYNC Mobile SDK | SyncProxyTester: Add possibility to restore encryption state at SPT side

[CW29]
+ SYNC Mobile SDK: added ssl error description listing
* SYNC Mobile SDK | SyncProxyTester: Added possibility to start several secure sessions.

[CW28]
* SYNC Mobile SDK: PutFile - length parameter does not match total length of file if offset is set to 0
* SyncProxyTester: SDL returns "INVALID_DATA" on UpdateTurnList request with empty navigationText or turnIcon of element
* SYNC Mobile SDK | SyncProxyTester: Add possibility to restore connection during autotest

[CW27]
* SyncProxyTester | SyncProxyAndroid SDK: Changed SSL error testing
* SYNC Mobile SDK: SDL should always do a notification of the mobile app about closed session
* SyncProxyTester: Log two request of UnsubscribeButton on mobile
* SyncProxyTester: Some RPC responses are not shown in the list view
* SyncProxyTester: Incorrect representation of the "key - value" pair in the RPC Request at the XML test
* SyncProxyTester: Crashes while executing cics_UpperBound_big.xml

[CW26]
+ SyncProxyTester | SyncProxyAndroid SDK: Added test handshake error sending to SDL.

[CW25]
* SyncProxyTester | SyncProxyAndroid SDK: major develop to WP2 branch merge
* SYNC Mobile SDK | SyncProxyTester: RPC Request "UnregisterAppInterface" send error
* SYNC Mobile SDK | SyncProxyTester: Resumption: Heartbeat timeout after IgnitionOff on mobile
* SyncProxyTester: AppInterfaceUnregisteredReason is displayed as service message
* SyncProxyTester: SetGlobalProperties: if uncheck all checkboxes of KeyboardProperties structure, anyway request will be sent with parameter keypressMode
* SYNC Mobile SDK: ProtocolMessageProcessor still send media messages when service is stopped
* SyncProxyTester: Show request, add empty SoftButtons array in the request
+ SYNC Mobile SDK: SyncMsgVersion update
* SyncProxyTester: Incorrect parsing integer value in structure of request in .xml tests
