@@ -32,34 +32,35 @@ public class PutFileRPCRequestConverter implements IRPCRequestConverter {
                                                      byte protocolVersion) {
         final List<ProtocolMessage> messagesList = new ArrayList<ProtocolMessage>();
 
-        if (request instanceof PutFile) {
-            final byte[] bulkData = request.getBulkData();
-            if (bulkData != null) {
-                final int frameCount = (int) Math.ceil(bulkData.length * 1.0 / maxDataSize);
+        final byte[] bulkData = request.getBulkData();
+        if (bulkData != null) {
+            final int frameCount = (int) Math.ceil(bulkData.length * 1.0 / maxDataSize);
 
-                final PutFile putFile = (PutFile) request;
-                final Integer offset = putFile.getOffset();
-                final int baseOffset = (offset != null) ? offset : 0;
+            final PutFile putFile = (PutFile) request;
+            final Integer offset = putFile.getOffset();
+            final int baseOffset = (offset != null) ? offset : 0;
 
-                PutFile copyRequest = copyRequest(putFile);
-                for (int i = 0; i < frameCount; ++i) {
-                    final int start = i * maxDataSize;
-                    final int end = Math.min((i + 1) * maxDataSize, bulkData.length);
-                    final byte[] bulkDataRange = Arrays.copyOfRange(bulkData, start, end);
-                    copyRequest.setOffset(baseOffset + start);
-                    copyRequest.setLength(end - start);
+            PutFile copyRequest = copyRequest(putFile);
+            for (int i = 0; i < frameCount; ++i) {
+                final int start = i * maxDataSize;
+                final int end = Math.min((i + 1) * maxDataSize, bulkData.length);
+                final byte[] bulkDataRange = Arrays.copyOfRange(bulkData, start, end);
+                copyRequest.setOffset(baseOffset + start);
+                copyRequest.setLength(end - start);
+                if (putFile.getSystemFile() != null && putFile.getSystemFile()) {
                     copyRequest.setSystemFile(true);
-
-                    messagesList.add(DefaultRPCRequestConverter.createProtocolMessage(copyRequest,
-                            sessionID, protocolVersion, MessageType.RPC, ServiceType.RPC,
-                            bulkDataRange, marshaller));
                 }
-            } else {
-                // create one message without bulk data
-                messagesList.add(DefaultRPCRequestConverter.createProtocolMessage(request,
+                //copyRequest.setSystemFile(true);
+
+                messagesList.add(DefaultRPCRequestConverter.createProtocolMessage(copyRequest,
                         sessionID, protocolVersion, MessageType.RPC, ServiceType.RPC,
-                        null, marshaller));
+                        bulkDataRange, marshaller));
             }
+        } else {
+            // create one message without bulk data
+            messagesList.add(DefaultRPCRequestConverter.createProtocolMessage(request,
+                    sessionID, protocolVersion, MessageType.RPC, ServiceType.RPC,
+                    null, marshaller));
         }
 
         return messagesList;
